--- a/index.html
+++ b/index.html
@@ -248,5 +248,6 @@
     <script src="assets/js/functions.js"></script>
     <script src="assets/js/map.js"></script>
     <script src="assets/js/slide.js"></script>
+    <script src="assets/js/slider.js"></script>
   </body>
 </html>
